@@ -370,3 +370,5 @@
 	  when I was trying to add correct handling for loss of connection (Darcy Gong)
 	* apps/nshlib/nsh_telnetd.c:  Add support for login to Telnet session via
 	  username and password (Darcy Gong).
+	* apps/netutils/resolv/resolv.c (and files using the DNS resolver): Various
+	  DNS address resolution improvements from Darcy Gong.
